--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -15,7 +15,7 @@
           <a class="nav-link" href="#">Filmes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Novidades</a>
+          <a class="nav-link" href="#">Promoções</a>
         </li>
         <li class="nav-item">
           <a class="nav-link">Login</a>
