Implementando find Movies

--- a/views/admin/register.handlebars
+++ b/views/admin/register.handlebars
@@ -38,6 +38,10 @@
                     <option value="Terror">Terror</option>
                 </select>
            </div>
+           <div class="mb-3">
+                <label for="synopsis">Sinopse: </label>
+                <textarea name="synopsis" class="form-control"></textarea>
+           </div>
            <button type="submit" class="btn btn-primary">Registrar</button>
         </form>
     </div>
