estilizando navbar e homepag

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinema API</title>
 </head>
-<body>
+<body style="background-color: rgb(78, 16, 87);">
     {{>_navbar}}
     {{{body}}}
 </body>
