--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -1,16 +1,14 @@
 <div class="container text-center">
-  <div class="row">
-    <div class="col-sm">
+    <div class="row row-cols-4" >
         {{#each movies}}
-            <div class="card mt-3" style="width: 18rem;">
-                <img src="{{wallpaper}}" class="card-img-top" alt="...">
+            <div class="card col mt-3" style="width: 18rem; margin-left: 1rem; background-color: rgb(91, 17, 102); border-color: rgb(78, 16, 87);">
+                <img src="{{wallpaper}}" class="card-img-top" alt="..." height="400px">
                 <div class="card-body">
-                    <p class="card-text" style="white-space: normal; width: 30ch; overflow: hidden; text-overflow: clip; height: 20ch">{{synopsis}}</p>
+                    <p class="card-text" style="overflow: hidden; height: 20ch; color:white; ">{{synopsis}}</p>
                 </div>
             </div>
         {{else}}
             <h5>Nenhuma postagem</h5>
         {{/each}}
     </div>
-  </div>
 </div>
