--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg " style="background-color: #000000;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="https://i.pinimg.com/originals/06/b9/a1/06b9a181cdc16515325b9ede537defca.png" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
+      <img src="https://i.pinimg.com/originals/ea/8d/11/ea8d11f1ffc6355b8a440106ce61d0f3.jpg" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,16 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="#" style="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Filmes</a>
+          <a class="nav-link text-light" href="#">Filmes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Promoções</a>
+          <a class="nav-link text-light" href="#">Promoções</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Login</a>
+          <a class="nav-link text-light">Login</a>
         </li>
       </ul>
     </div>
