--- a/views/catalog/index.handlebars
+++ b/views/catalog/index.handlebars
@@ -1,29 +1,6 @@
-<div id="carouselExampleCaptions" class="carousel slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" >
-      <img src="https://viciados.net/wp-content/uploads/2022/10/Homem-Formiga-e-a-Vespa-Quantumania-Trailer.webp" class="d-block w-50" alt="...">
-      <img src="https://i.pinimg.com/originals/1c/55/e0/1c55e0af9453d3bda297b43f6aca2cc4.jpg" class="d-block w-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjOG8Pk1vkMJqtcplNhrqA2oG-OV7dRCNKDAWPrgtagWHHoqrWPkpYXin4hhdFLQ-_mZBhe7dskiYd1TZdES33JKanJrPjvFcMwrB_K3TH_rwb_XkzgP-Y9ZgN2bGzxS1_wYde2S67lDPTTZ8tlT0YaNsHG2bp4Nc0TsSOjRL_5M_-eamJXcvmE5b5B/s1920/D&D.jpg" class="d-block w-50" alt="...">
-      <img src="https://gamearena.gg/wp-content/uploads/2023/02/fpk3affamaeqec1__8p02oy.jpeg" class="d-block w-50" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://agentegospel.com.br/wp-content/uploads/2023/02/filme-deixados-para-tras-filme.jpg" class="d-block w-50" alt="...">
-      <img src="https://t2.tudocdn.net/656993?w=1920&h=1080" class="d-block w-50" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
