--- a/views/admin/register.handlebars
+++ b/views/admin/register.handlebars
@@ -18,19 +18,19 @@
             <label for="classification" class="form-label text-light">Classificação indicativa</label>
                  <select class="form-select form-select-lg" name="classification" aria-label=".form-select-lg example" required>
                     <option selected></option>
-                    <option value="1" >LIVRE</option>
-                    <option value="10">10 anos</option>
-                    <option value="12">12 anos</option>
-                    <option value="14">14 anos</option>
-                    <option value="16">16 anos</option>
-                    <option value="18">18 anos</option>
+                    <option value="LIVRE" >LIVRE</option>
+                    <option value="10 anos">10 anos</option>
+                    <option value="12 anos">12 anos</option>
+                    <option value="14 anos">14 anos</option>
+                    <option value="16 anos">16 anos</option>
+                    <option value="18 anos">18 anos</option>
                 </select>
            </div>
            <div class="mb-3">
             <label for="gender" class="form-label text-light">Gênero</label>
                  <select class="form-select form-select-lg" name="gender" aria-label=".form-select-lg example" required>
                     <option selected></option>
-                    <option value="Acao" >Ação</option>
+                    <option value="Ação" >Ação</option>
                     <option value="Aventura">Aventura</option>
                     <option value="Comedia">Comédia</option>
                     <option value="Fantasia">Fantasia</option>
