adicionando pag de catalogo

--- a/views/movie/main.handlebars
+++ b/views/movie/main.handlebars
@@ -1,3 +1,6 @@
+<div style="background-color: black; height: 2rem">
+    <h4 class="d-flex justify-content-center text-light" style="background-color: black;">NOVIDADES</h4>
+</div>
 <div class="container mt-4">
     <div class="row" style="background-color: rgb(91, 17, 102);">
         <div class="d-flex justify-content-center" style="width: 18rem; margin-left: 3rem; background-color: rgb(91, 17, 102); border: 0px" >
@@ -6,7 +9,7 @@
         <div class="col-8 mt-3 text-light" style="width: 50rem;">
             <h4 class="text-center">{{movie.name}}</h4>
             <hr>
-            <p>Classificação: {{movie.classification}} Anos <br> Gênero: {{movie.gender}}</p>
+            <p>Classificação: {{movie.classification}} <br> Gênero: {{movie.gender}}</p>
             <hr>
             <p class="fw-bold"> Sinopse: 
                 <p>
