--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -12,7 +12,7 @@
           <a class="nav-link active text-light" aria-current="page" href="/" style="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Filmes</a>
+          <a class="nav-link text-light" href="/catalog">Filmes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" href="#">Promoções</a>
