--- a/views/catalog/index.handlebars
+++ b/views/catalog/index.handlebars
@@ -1,6 +1,22 @@
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
+<div style="background-color: black; height: 2rem">
+    <h4 class="d-flex justify-content-center text-light" style="background-color: black;">CATÁLOGO COMPLETO</h4>
+</div>
+<div class="container text-center">
+    <div class="row row-cols-4">
+        {{#each movies}}
+            <div class="card col mt-3" style="width: 18rem; margin-left: 1rem; background-color: rgb(91, 17, 102); border-color: rgb(78, 16, 87);">
+                <img src="{{wallpaper}}" class="card-img-top" alt="..." height="400px">
+                <h4 class="text-light mt-2">{{name}}</h4>
+                <hr style="color: black;">
+                <div class="card-body">
+                    <p class="card-text text-light" style="overflow: hidden; height: 20ch;">{{synopsis}}</p>
+                </div>
+                <hr>
+                <a  href="/movie/{{_id}}"><button type="submit" class="btn btn-success">Saiba mais</button></a>
+                <br>
+            </div>
+        {{else}}
+            <h5>Nenhuma postagem</h5>
+        {{/each}}
+    </div>
 </div>
