--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -1,4 +1,6 @@
-<h4 class="d-flex justify-content-center text-light mt-3">NOVIDADES</h4>
+<div style="background-color: black; height: 2rem">
+    <h4 class="d-flex justify-content-center text-light" style="background-color: black;">NOVIDADES</h4>
+</div>
 <div class="container text-center">
     <div class="row row-cols-4">
         {{#each movies}}
