--- a/views/movie/main.handlebars
+++ b/views/movie/main.handlebars
@@ -1,6 +1,3 @@
-<div style="background-color: black; height: 2rem">
-    <h4 class="d-flex justify-content-center text-light" style="background-color: black;">NOVIDADES</h4>
-</div>
 <div class="container mt-4">
     <div class="row" style="background-color: rgb(91, 17, 102);">
         <div class="d-flex justify-content-center" style="width: 18rem; margin-left: 3rem; background-color: rgb(91, 17, 102); border: 0px" >
@@ -17,5 +14,13 @@
                 </p>
             </p>
         </div>
+    </div>
+    <div>
+        <h4 class="text-light">Sessões</h4>
+        {{#each session}}
+            <p class="text-light">{{session.hour}}</p>
+        {{else}}
+            <option value="" class="text-light">Nenhuma sessão registrado</option>
+        {{/each}}
     </div>
 </div>
