adicionando atributo ao session e finalizando view movie

--- a/views/admin/addSession.handlebars
+++ b/views/admin/addSession.handlebars
@@ -8,7 +8,7 @@
         <form action="/admin/register/session/new" method="POST">
             <div class="mb-3">
                 <label for="hour" class="form-label text-light">Horario da sessão</label>
-                <input type="text" name="hour" class="form-control" placeholder="Insira a hora da sessão" required>
+                <input type="time" name="hour" class="form-control" placeholder="Insira a hora da sessão" required>
             </div>
            <div class="mb-3">
             <label for="audio" class="form-label text-light">Audio</label>
