Implementando compra de ingresso

--- a/views/admin/editSession.handlebars
+++ b/views/admin/editSession.handlebars
@@ -2,7 +2,7 @@
     <div class="alert alert-danger">{{texto}}</div>
 {{else}}
 {{/each}}
-<h4 class="d-flex justify-content-center mt-3 text-light">Registrando Sessão de Cinema</h4>
+<h4 class="d-flex justify-content-center mt-3 text-light">Editando Sessão de Cinema</h4>
 <div class="card container" style="background-color: rgb(91, 17, 102); border-color: rgb(78, 16, 87);">
     <div class="card-body">
         <form action="/admin/edit/session/update" method="POST">
