--- a/views/movie/main.handlebars
+++ b/views/movie/main.handlebars
@@ -21,7 +21,8 @@
             {{theater.number}}
         {{#each session}}
                 <div class="col">
-                    <p class="text-light border rounded text-center" style="width: 10rem; background-color:gray; cursor: pointer">{{type}} {{audio}} {{hour}}</p> 
+                    <p class="text-light border rounded text-center mt-2" style="width: 10rem; background-color:gray; cursor: pointer">{{type}} {{audio}} {{hour}}</p>
+                    <a  href="/user/buy/ticket/{{_id}}"><button type="submit" class="btn btn-primary">Comprar</button></a>
                 </div>
         </div>
         {{else}}
