--- a/views/admin/editMovie.handlebars
+++ b/views/admin/editMovie.handlebars
@@ -3,7 +3,7 @@
     <div class="alert alert-danger">{{texto}}</div>
 {{else}}
 {{/each}}
-<h4 class="d-flex justify-content-center mt-3 text-light">Registrando filme</h4>
+<h4 class="d-flex justify-content-center mt-3 text-light">Editando filme</h4>
 <div class="card container" style="background-color: rgb(91, 17, 102); border-color: rgb(78, 16, 87);">
     <div class="card-body">
         <form action="/admin/edit/movie/update" method="POST">
