implementando autenticação para compra de ingresso

--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,6 +16,9 @@
         </li>
         {{#if user}}
             <li class="nav-item">
+              <a class="nav-link text-light" href="/catalog">Meus ingressos</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-light" href="/user/logout">Logout</a>
             </li>
         {{else}}
