--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -16,7 +16,7 @@
         </li>
         {{#if user}}
             <li class="nav-item">
-              <a class="nav-link text-light" href="/catalog">Meus ingressos</a>
+              <a class="nav-link text-light" href="/user/ticket">Meus ingressos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-light" href="/user/logout">Logout</a>
