implementando carga de ingressos

--- a/views/catalog/index.handlebars
+++ b/views/catalog/index.handlebars
@@ -12,7 +12,7 @@
                     <p class="card-text text-light" style="overflow: hidden; height: 20ch;">{{synopsis}}</p>
                 </div>
                 <hr>
-                <a  href="/movie/{{_id}}"><button type="submit" class="btn btn-success">Saiba mais</button></a>
+                <a  href="/movie/{{_id}}"><button type="submit" class="btn btn-success">Comprar</button></a>
                 <br>
             </div>
         {{else}}
