--- a/views/user/userTicket.handlebars
+++ b/views/user/userTicket.handlebars
@@ -18,6 +18,6 @@
         </div>
     </div>
     {{else}}
-            <option value="" class="text-light">Nenhuma sessão registrado</option>
+            <option value="" class="text-light">Nenhum ingresso comprado</option>
     {{/each}}
 </div>
