--- a/views/admin/editMovie.handlebars
+++ b/views/admin/editMovie.handlebars
@@ -57,11 +57,14 @@
                 <div class="col mt-2">
                     <p class="text-light border rounded text-center" style="width: 10rem; background-color:gray; cursor: pointer">{{type}} {{audio}} {{hour}}</p> 
                     <a  href="/admin/edit/session/{{_id}}"><button type="submit" class="btn btn-success col">Editar</button></a>
-                    <a  href="/admin/movie/{{_id}}"><button type="submit" class="btn btn-danger col">Excluir</button></a>
+                    <form action="/admin/session/delete" method="POST" class="col">
+                        <input type="hidden" name="id" value="{{_id}}">
+                        <button type="submit" class="btn btn-danger">Excluir</button>
+                    </form>
                 </div>
         </div>
         {{else}}
-            <option value="" class="text-light">Nenhuma sessão registrado</option>
+            <option value="" class="text-light">Nenhuma sessão disponivel</option>
         {{/each}}
         
     </div>
