--- a/views/movie/main.handlebars
+++ b/views/movie/main.handlebars
@@ -26,7 +26,7 @@
                 </div>
         </div>
         {{else}}
-            <option value="" class="text-light">Nenhuma sessão registrado</option>
+            <option value="" class="text-light">Nenhuma sessão disponivel</option>
         {{/each}}
         
     </div>
